--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="/CNN/favpng_logo-cnn-brand-trademark.png" type="image/x-icon">
+  <link rel="icon" href="/Cnn/favpng_logo-cnn-brand-trademark.png" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CNN</title>
   <link rel="stylesheet" href="styles.css">
@@ -11,7 +11,7 @@
   <header>
     <div class="header-container">
       <div class="logo">
-        <img src="/CNN/favpng_logo-cnn-brand-trademark.png" alt="CNN Logo">
+        <img src="/Cnn/favpng_logo-cnn-brand-trademark.png" alt="CNN Logo">
       </div>
       <nav>
         <ul>
@@ -36,7 +36,7 @@
           </p>
         </header>
         <figure class="article-image">
-          <img src="/CNN/images.jpeg" alt="Main news image">
+          <img src="/Cnn/images.jpeg" alt="Main news image">
         </figure>
         <section class="article-body">
           <p>The use of artificial intelligence by terrorist organizations like ISIS is a concerning development. Towsif, a Bangladeshi boy, is reportedly working on AI projects for the group. The newly selected supreme leader of ISIS has allegedly made AI a priority, with the goal of utilizing it to further their global ambitions.
