--- a/index.html
+++ b/index.html
@@ -3,47 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Learn about the boarded squirrel, an intriguing animal species with unique behaviors. Discover interesting facts and fun details about the boarded squirrel.">
-    <meta name="keywords" content="Boarded squirrel, squirrel facts, boarded squirrel behaviors, interesting animals, animal behavior">
+    <meta name="description" content="Learn about the Mysterious Boarded Squirrel, an intriguing animal species with unique behaviors. Discover interesting facts and fun details about the boarded squirrel.">
+    <meta name="keywords" content="Mysterious Boarded squirrel, boarded squirrel facts, squirrel behaviors, mysterious animals, animal behavior, rare squirrel species">
     <meta name="author" content="Your Name">
-    <meta property="og:title" content="Boarded Squirrel - Everything You Need to Know">
-    <meta property="og:description" content="Learn about the boarded squirrel, an intriguing animal species with unique behaviors.">
+    <meta property="og:title" content="Mysterious Boarded Squirrel - Everything You Need to Know">
+    <meta property="og:description" content="Learn about the Mysterious Boarded Squirrel, an intriguing animal species with unique behaviors.">
     <meta property="og:image" content="url-to-your-image.jpg">
-    <meta property="og:url" content="https://yourwebsite.com/boarded-squirrel">
-    <title>Boarded Squirrel - Fascinating Facts About Squirrels</title>
-    <link rel="canonical" href="https://yourwebsite.com/boarded-squirrel">
+    <meta property="og:url" content="https://yourusername.github.io/mysterious-boarded-squirrel">
+    <title>Mysterious Boarded Squirrel - Fascinating Facts About Squirrels</title>
+    <link rel="canonical" href="https://yourusername.github.io/mysterious-boarded-squirrel">
 </head>
 <body>
     <header>
-        <h1>Boarded Squirrel: An Intriguing Animal</h1>
+        <h1>Mysterious Boarded Squirrel: An Intriguing Animal</h1>
     </header>
     
     <section>
-        <h2>Introduction to the Boarded Squirrel</h2>
-        <p>The boarded squirrel, a unique and lesser-known species, exhibits interesting behaviors and fascinating survival strategies. These squirrels are notable for their distinct appearance and adaptable nature.</p>
+        <h2>Introduction to the Mysterious Boarded Squirrel</h2>
+        <p>The Mysterious Boarded Squirrel, a unique and lesser-known species, exhibits fascinating behaviors and survival strategies. These squirrels are notable for their distinct appearance and adaptability to different environments.</p>
     </section>
 
     <section>
-        <h2>Behavior and Habitat of the Boarded Squirrel</h2>
-        <p>Boarded squirrels are primarily found in wooded areas and have developed fascinating methods of survival. Their behavior includes tree climbing, hoarding food, and communication through various sounds.</p>
+        <h2>Behavior and Habitat of the Mysterious Boarded Squirrel</h2>
+        <p>Boarded squirrels are primarily found in secluded wooded areas. They are known for their excellent climbing abilities and communication methods. Their behavior includes hoarding food and a wide range of vocalizations.</p>
     </section>
 
     <section>
-        <h2>Interesting Facts About the Boarded Squirrel</h2>
+        <h2>Interesting Facts About the Mysterious Boarded Squirrel</h2>
         <ul>
-            <li>The boarded squirrel is known for its territorial nature.</li>
-            <li>They have exceptional memory when it comes to finding their food caches.</li>
-            <li>Their fur provides excellent insulation during cold weather.</li>
+            <li>The Mysterious Boarded Squirrel is known for its exceptional memory.</li>
+            <li>They are incredibly territorial and will protect their nests from other squirrels.</li>
+            <li>These squirrels have evolved unique fur patterns to blend into their environment, making them difficult to spot.</li>
         </ul>
     </section>
 
     <section>
-        <h2>Why Boarded Squirrels Matter</h2>
-        <p>Understanding the boarded squirrel helps us appreciate the complexity of nature and the importance of conserving their habitats. These animals contribute to forest health by dispersing seeds and maintaining ecological balance.</p>
+        <h2>Why Mysterious Boarded Squirrels Matter</h2>
+        <p>Understanding the Mysterious Boarded Squirrel is key to appreciating the diverse ways animals adapt to their environments. Their role in the ecosystem includes seed dispersal and forest maintenance, which helps maintain ecological balance.</p>
     </section>
 
     <footer>
-        <p>© 2025 Your Website. All rights reserved. | <a href="https://yourwebsite.com/privacy-policy">Privacy Policy</a></p>
+        <p>© 2025 Your Website. All rights reserved. | <a href="https://yourusername.github.io/privacy-policy">Privacy Policy</a></p>
     </footer>
 </body>
 </html>
