--- a/index.html
+++ b/index.html
@@ -3,43 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Learn about the Mysterious Boarded Squirrel, an intriguing animal species with unique behaviors. Discover interesting facts and fun details about the boarded squirrel.">
-    <meta name="keywords" content="Mysterious Boarded squirrel, boarded squirrel facts, squirrel behaviors, mysterious animals, animal behavior, rare squirrel species">
+    <meta name="description" content="Discover fascinating facts about the Zerophonic Quokka, a rare and unique animal with captivating behaviors.">
+    <meta name="keywords" content="Zerophonic Quokka, rare animal facts, unique animals, animal behavior, quokka species, fascinating creatures">
     <meta name="author" content="Your Name">
-    <meta property="og:title" content="Mysterious Boarded Squirrel - Everything You Need to Know">
-    <meta property="og:description" content="Learn about the Mysterious Boarded Squirrel, an intriguing animal species with unique behaviors.">
+    <meta property="og:title" content="Zerophonic Quokka - Everything You Need to Know">
+    <meta property="og:description" content="Discover fascinating facts about the Zerophonic Quokka, a rare and unique animal with captivating behaviors.">
     <meta property="og:image" content="url-to-your-image.jpg">
-    <meta property="og:url" content="https://yourusername.github.io/mysterious-boarded-squirrel">
-    <title>Mysterious Boarded Squirrel - Fascinating Facts About Squirrels</title>
-    <link rel="canonical" href="https://yourusername.github.io/mysterious-boarded-squirrel">
+    <meta property="og:url" content="https://yourusername.github.io/zerophonic-quokka">
+    <title>Zerophonic Quokka - Fascinating Facts About Quokkas</title>
+    <link rel="canonical" href="https://yourusername.github.io/zerophonic-quokka">
 </head>
 <body>
     <header>
-        <h1>Mysterious Boarded Squirrel: An Intriguing Animal</h1>
+        <h1>Zerophonic Quokka: An Intriguing Animal</h1>
     </header>
     
     <section>
-        <h2>Introduction to the Mysterious Boarded Squirrel</h2>
-        <p>The Mysterious Boarded Squirrel, a unique and lesser-known species, exhibits fascinating behaviors and survival strategies. These squirrels are notable for their distinct appearance and adaptability to different environments.</p>
+        <h2>Introduction to the Zerophonic Quokka</h2>
+        <p>The Zerophonic Quokka, a unique and lesser-known species, exhibits fascinating behaviors and survival strategies. These creatures are known for their charm and unique adaptability to various environments.</p>
     </section>
 
     <section>
-        <h2>Behavior and Habitat of the Mysterious Boarded Squirrel</h2>
-        <p>Boarded squirrels are primarily found in secluded wooded areas. They are known for their excellent climbing abilities and communication methods. Their behavior includes hoarding food and a wide range of vocalizations.</p>
+        <h2>Behavior and Habitat of the Zerophonic Quokka</h2>
+        <p>Found in secluded areas, the Zerophonic Quokka displays a variety of unique behaviors that help it thrive. It is also known for its social nature and playful interactions with its environment.</p>
     </section>
 
     <section>
-        <h2>Interesting Facts About the Mysterious Boarded Squirrel</h2>
+        <h2>Interesting Facts About the Zerophonic Quokka</h2>
         <ul>
-            <li>The Mysterious Boarded Squirrel is known for its exceptional memory.</li>
-            <li>They are incredibly territorial and will protect their nests from other squirrels.</li>
-            <li>These squirrels have evolved unique fur patterns to blend into their environment, making them difficult to spot.</li>
+            <li>The Zerophonic Quokka is known for its distinctive social behavior.</li>
+            <li>They have developed unique vocalizations to communicate with each other.</li>
+            <li>These animals play a vital role in maintaining their ecosystem by promoting plant growth through seed dispersal.</li>
         </ul>
     </section>
 
     <section>
-        <h2>Why Mysterious Boarded Squirrels Matter</h2>
-        <p>Understanding the Mysterious Boarded Squirrel is key to appreciating the diverse ways animals adapt to their environments. Their role in the ecosystem includes seed dispersal and forest maintenance, which helps maintain ecological balance.</p>
+        <h2>Why Zerophonic Quokkas Matter</h2>
+        <p>Understanding the Zerophonic Quokka is essential to appreciating the diversity of animal behavior. These creatures contribute significantly to their environment and serve as an example of evolutionary adaptation.</p>
     </section>
 
     <footer>
